[package]
name = "differ_cli"
version = "0.2.0"
edition = "2021"
description = "Syntactic diff viewer with persistent line-level annotations"
license = "MIT"

[[bin]]
name = "differ"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Storage & serialization
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI & utilities
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
git2 = "0.19"
anyhow = "1.0"
notify = "6.1"

# Syntax highlighting
syntect = "5.2"
syntect-assets = "0.23"
sha2 = "0.10"
toml = "0.8"
regex = "1.10"
unicode-width = "0.1"
similar = "2.6"

[dev-dependencies]
tempfile = "3.10"
